# goit-python-web-HW07

./: README.md  my_select.py  pyproject.toml  seed.py
migrations/versions/: 8e9a03aa7bab_init.py
